--- a/Index.html
+++ b/Index.html
@@ -610,7 +610,7 @@
 					<br />
 					<div id="scrambledImageDiv" class="scrambledImage" >
 						<img
-							id="scrambledImageImg"
+							id="scrambledImageImg" />
 					</div>
 				</td>
 				<td>
