--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,9 @@
 			td {
 				padding: 5px;
 			}
+			input {
+				width: 700px;
+			}
 			.textBox {
 				width: 700px;
 			}
@@ -514,6 +517,62 @@
 			}
 		</style>
 		<script type="text/javascript" language="javascript">
+			var freeFormShuffleIndex = [];
+			var previousImageId = null;
+
+			for (var i = 0; i < 16; i++) {
+				freeFormShuffleIndex[i] = i;
+			}
+
+			function beginSwap(image) {
+				var selectedId = image.id;
+				var selectedIndex = getIndexFromId(selectedId);
+				var previousIndex = -1;
+
+				//alert(getIndexFromId(selectedId));
+
+				if (previousImageId) {
+					previousIndex = getIndexFromId(previousImageId);
+					// time to swap
+
+					// TODO: Swap the indexes in the freeFormShuffleIndex
+					var oldIndex = freeFormShuffleIndex[previousIndex];
+					freeFormShuffleIndex[previousIndex] = freeFormShuffleIndex[selectedIndex];
+					freeFormShuffleIndex[selectedIndex] = oldIndex;
+
+					// Redraw
+					transformFreeForm();
+
+					previousImageId = null;
+				}
+				else {
+					// This is the first click
+					//alert('You selected ' + selectedId);
+					previousImageId = selectedId;
+				}
+			}
+
+			function transformFreeForm() {
+				for (var z = 0; z < 16; z++) {
+
+				}
+
+				for (var i = 0; i < 4; i++) {
+					for (var j = 0; j < 4; j++) {
+						var img = getImage(4, i, j);
+
+						var index = freeFormShuffleIndex[getIndexFromXY(i, j)];
+						var top = getXOffset(index) + 'px';
+						var left = getYOffset(index) + 'px';
+
+						img.style.position = 'absolute';
+						img.style.top = top;
+						img.style.left = left;
+
+						console.log(i + 'x' + j + ' : (' + top + ' ' + left + ')');
+					}
+				}
+			}
 
 			function bodyLoad() {
 				var textBox = document.getElementById('ImageUrlTextBox');
@@ -525,7 +584,7 @@
 				var originalImage = document.getElementById('scrambledImageImg');
 				originalImage.src = imageUrl;
 
-				for (var i = 0; i < 4; i++) {
+				for (var i = 0; i < 5; i++) {
 					for (var j = 0; j < 4; j++) {
 						for (var k = 0; k < 4; k++) {
 							var image = getImage(i, j, k);
@@ -533,10 +592,41 @@
 						}
 					}
 				}
+
+				transformFreeForm();
 			}
 
 			function getImage(x, y, z) {
 				return document.getElementById('image' + x +'x' + y + '' + z);
+			}
+
+			function getIndexFromId(imageId) {
+				var x = imageId.substring(7, 8);
+				var y = imageId.substring(8, 9);
+				// alert(imageId + ': ' + x + 'x' +  y);
+				var index = (4 * x) + (y * 1);
+				//alert(index);
+				return index;
+			}
+
+			function getIndexFromXY(x, y) {
+				return (4 * x) + y;
+			}
+
+			function getXIndex(index) {
+				return parseInt(index / 4);
+			}
+
+			function getYIndex(index) {
+				return index % 4;
+			}
+
+			function getXOffset(index) {
+				return -(getXIndex(index) * 60);
+			}
+
+			function getYOffset(index) {
+				return -(getYIndex(index) * 60);
 			}
 		</script>
 	</head>
@@ -568,6 +658,8 @@
 							<li>Click "Copy Image URL"</li>
 							<li>Paste the image in the Text Box below</li>
 							<li>Click Go</li>
+							<li>If the predetermined shuffle algorithms don't work, then use the "Free Form Shuffle" to 
+								rearrange the picture by clicking on the tiles.</li>
 							<li>Message the attractive ones</li>
 						</ul>
 					</td>
@@ -582,14 +674,6 @@
 							id="ImageUrlTextBox"
 							class="textBox"
 							/>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						&nbsp;
-					</td>
-					<td>
-						&nbsp;
 					</td>
 				</tr>
 				<tr>
@@ -663,6 +747,31 @@
 						<div class="tile33"><img id="image1x33" /></div>
 					</div>
 				</td>
+				<td>
+					Free Form Shuffle:
+					<br />
+					<div class="unscrambledImage" >
+						<div class="tile00"><img id="image4x00" onclick="beginSwap(this);" /></div>
+						<div class="tile01"><img id="image4x01" onclick="beginSwap(this);" /></div>
+						<div class="tile02"><img id="image4x02" onclick="beginSwap(this);" /></div>
+						<div class="tile03"><img id="image4x03" onclick="beginSwap(this);" /></div>
+
+						<div class="tile10"><img id="image4x10" onclick="beginSwap(this);" /></div>
+						<div class="tile11"><img id="image4x11" onclick="beginSwap(this);" /></div>
+						<div class="tile12"><img id="image4x12" onclick="beginSwap(this);" /></div>
+						<div class="tile13"><img id="image4x13" onclick="beginSwap(this);" /></div>
+						
+						<div class="tile20"><img id="image4x20" onclick="beginSwap(this);" /></div>
+						<div class="tile21"><img id="image4x21" onclick="beginSwap(this);" /></div>
+						<div class="tile22"><img id="image4x22" onclick="beginSwap(this);" /></div>
+						<div class="tile23"><img id="image4x23" onclick="beginSwap(this);" /></div>
+						
+						<div class="tile30"><img id="image4x30" onclick="beginSwap(this);" /></div>
+						<div class="tile31"><img id="image4x31" onclick="beginSwap(this);" /></div>
+						<div class="tile32"><img id="image4x32" onclick="beginSwap(this);" /></div>
+						<div class="tile33"><img id="image4x33" onclick="beginSwap(this);" /></div>
+					</div>
+				</td>
 			</tr>
 			<tr>
 				<td>
@@ -717,6 +826,9 @@
 						<div class="tile32"><img id="image3x32" /></div>
 						<div class="tile33"><img id="image3x33" /></div>
 					</div>
+				</td>
+				<td>
+					&nbsp;
 				</td>
 			</tr>
 		</table>
