--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<style type="text/css">
-			td {
-				padding: 5px;
+			td, th {
+				padding: 10px;
 			}
 			input {
 				width: 700px;
@@ -170,6 +170,9 @@
 				position: absolute;
 				top: 180px;
 				left: 180px;
+			}
+			.freeFormCell {
+				background-color: #99f;
 			}
 
 			/* ================================================== */
@@ -747,7 +750,7 @@
 						<div class="tile33"><img id="image1x33" /></div>
 					</div>
 				</td>
-				<td>
+				<td class="freeFormCell">
 					Free Form Shuffle:
 					<br />
 					<div class="unscrambledImage" >
