--- a/Index.html
+++ b/Index.html
@@ -646,7 +646,7 @@
 				</tr>
 				<tr>
 					<td colspan="2">
-						OKCupid: "Crazy Blind Date" Image Descrambler
+						OKCupid: "Crazy Blind Date" Image Descrambler version 0.9
 						<br /><br />
 					</td>
 				</tr>
